=== 7.1.1 / 2016-07-27

* Bug Fixes

  * Fix warning in `Casted#hash`

=== 7.1.0 / 2016-07-19

* Enhancements

  * Support Ruby 2.4 unified Integer class
  * Implement `CASE` conditional expression
  * Support for Bitwise Operations as `InfixOperations`

=== 7.0.0 / 2015-12-17

* Enhancements

  * Remove deprecated method `Table#primary_key`
  * Remove engine from the constructor arguments `Arel::Table`
  * Deprecate automatic type casting within Arel

=== 6.0.0 / 2014-11-25

* Enhancements

  * Remove deprecated `Arel::Expression`
  * Remove deprecated `Arel::SqlLiteral`
  * Remove deprecated `SelectManager#joins`
  * Remove deprecated `SelectManager#to_a`
  * Remove deprecated `Arel::Sql::Engine`
  * Remove deprecated `Arel::InnerJoin` constant
  * Remove deprecated `Arel::OuterJoin` constant

== 5.0.0 / 2013-12-04

* Enhancements

  * Remove deprecated code

* Bug Fixes

  * Fix serializing a relation when calling `to_yaml`

=== 4.0.2 / 2014-02-05

 * Bug Fixes

  * Fix `SqlLiteral` YAML serialization
  * PostgreSQL bugfix for invalid SQL in subqueries

== 4.0.1 / 2013-10-22

* Enhancements

  * Cache visitor dispatch on a per-visitor basis
  * Improve performance of #uniq across a large number of nodes

* Bug Fixes

  * Make visitors threadsafe by removing @last_column
  * Support `columns_for_distinct` with Oracle adapter

== 3.0.3 / 2013-11-12

* Enhancements

  * Support ANSI 2003 window functions

* Bug Fixes

  * Fix joins in Informix

== 3.0.2 / 2012-02-21

* Enhancements

  * Added a module for visiting and transforming bind values
  * Fix in [] to be false, not in [] to be true

* Bug Fixes

  * Revert fix for LIMIT / OFFSET when query is ordered in Oracle

== 3.0.1 / 2012-02-17

* Bug Fixes

  * Fixed LIMIT / OFFSET when query is ordered in Oracle

== 3.0.0 / 2012-01-12

* Enhancements

  * Support connection pool and schema cache

* Bug Fixes

  * Conditions with no column can be followed by other conditions in Postgres

== 2.2.3 / 2012-02-21
